--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,17 @@ jobs:
        - cmake --build .
        - ./my_project
 
+   - name: "Raspbian Buster pi Docker"
+     os: linux
+     dist: bionic
+     compiler: gcc
+     services:
+       - docker
+     before_install: 
+       - docker run --rm --privileged multiarch/qemu-user-static:register --reset
+     script: 
+       - "docker run -i -v \"${PWD}/..:${PWD}/..\" lebarsfa/pi:buster /bin/bash -c \"uname -a && cat /etc/os-release && cd ${PWD} && apt-get -q update && apt-get -y install sudo lsb-release wget unzip build-essential cmake git flex bison && lsb_release -a && git clone -b develop https://github.com/ibex-team/ibex-lib.git && cd ibex-lib && mkdir build ; cd build && cmake -D CMAKE_INSTALL_PREFIX=../../ibex -D CMAKE_CXX_FLAGS=-fPIC -D CMAKE_C_FLAGS=-fPIC .. && cmake --build . --target install && cd ../.. && git clone -b dev https://github.com/lebarsfa/tubex-lib && cd tubex-lib && git submodule init ; git submodule update && mkdir build ; cd build && cmake -D CMAKE_PREFIX_PATH=../ibex -D CMAKE_INSTALL_PREFIX=../../tubex .. && cmake --build . --target install && cd ../.. && wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip && unzip -q -o tubex_test_win.zip && rm -Rf tubex_test_win.zip && cd tubex_test_win && mv test .. && cd ../test && rm -Rf ../tubex_test_win && cmake . && cmake --build . && ./my_project && \""
+
    - name: "Windows Visual Studio 2017 x86"
      os: windows
      before_install: 
