--- a/.travis.yml
+++ b/.travis.yml
@@ -57,6 +57,8 @@ jobs:
      before_install: 
        - sudo apt-get -q update || true
        - sudo apt-get -y install flex bison || true
+       - sudo apt-get -y install python3-setuptools python3-pip python3-sphinx doxygen graphviz || true
+       - sudo pip3 install wheel pyibex sphinx_rtd_theme breathe sphinx-tabs
      script: 
        - git clone -b develop https://github.com/lebarsfa/ibex-lib.git
        - cd ibex-lib
