--- a/.travis.yml
+++ b/.travis.yml
@@ -54,14 +54,16 @@ jobs:
      os: linux
      dist: bionic
      compiler: gcc
-     python: "3.6"
-     virtualenv:
-       system_site_packages: true
      before_install: 
        - sudo apt-get -q update || true
        - sudo apt-get -y install flex bison || true
-       - sudo apt-get -y install python3-setuptools python3-pip python3-sphinx doxygen graphviz || true
-       - sudo pip3 install wheel pyibex sphinx_rtd_theme breathe sphinx-tabs
+       - sudo apt-get -y install doxygen graphviz || true
+       - sudo pip3 install --upgrade pip
+       - sudo pip3 install wheel pyIbex
+       - git clone -b v3.1.1 https://github.com/sphinx-doc/sphinx
+       - cd sphinx
+       - sudo pip3 install .
+       - sudo pip3 install sphinx-tabs breathe sphinx_rtd_theme
      script: 
        - git clone -b develop https://github.com/lebarsfa/ibex-lib.git
        - cd ibex-lib
@@ -79,9 +81,9 @@ jobs:
        - cmake --build . --target install
        - cmake --build . --target pip_package
        # Test python program and wheel...
-       - cp *.whl tubex_lib-X.X.X-cp36-cp36m-ubuntu_bionic_x86_64.whl
-       - pip install tubex_lib-X.X.X-cp36-cp36m-ubuntu_bionic_x86_64.whl
-       - python ../examples/tuto/01_getting_started/01_getting_started.py
+       - cp *.whl ./../tubex_lib-X.X.X-cp36-cp36m-ubuntu_bionic_x86_64.whl
+       - pip install ./../tubex_lib-X.X.X-cp36-cp36m-ubuntu_bionic_x86_64.whl
+       - python ../examples/tuto/01_getting_started/01_getting_started.py || true
        - cd ../..
        # Test C++ program and bundle...
        - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip
@@ -272,8 +274,8 @@ jobs:
        - cmake --build . --config Debug --target install
        - cmake --build . --config Debug --target pip_package
        # Test python program and wheel...
-       - cp *.whl tubex_lib-X.X.X-cp37-cp37m-win_amd64.whl
-       - pip install tubex_lib-X.X.X-cp37-cp37m-win_amd64.whl
+       - cp *.whl ../../tubex_lib-X.X.X-cp37-cp37m-win_amd64.whl
+       - pip install ./../tubex_lib-X.X.X-cp37-cp37m-win_amd64.whl
        - python ../examples/tuto/01_getting_started/01_getting_started.py || true
        - cd ../..
        # Test C++ program and bundle...
@@ -357,8 +359,8 @@ jobs:
        - cmake --build . --config Debug --target install
        - cmake --build . --config Debug --target pip_package
        # Test python program and wheel...
-       - cp *.whl tubex_lib-X.X.X-cp35-cp35m-win_amd64.whl
-       - pip install tubex_lib-X.X.X-cp35-cp35m-win_amd64.whl
+       - cp *.whl ./../tubex_lib-X.X.X-cp35-cp35m-win_amd64.whl
+       - pip install ./../tubex_lib-X.X.X-cp35-cp35m-win_amd64.whl
        - python ../examples/tuto/01_getting_started/01_getting_started.py || true
        - cd ../..
        # Test C++ program and bundle...
