--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ jobs:
      before_install: 
        - sudo apt-get -q update || true
        - sudo apt-get -y install flex bison || true
-       - sudo apt-get -y install python3-pip doxygen graphviz || true
+       - sudo apt-get -y install python3-setuptools python3-pip doxygen graphviz || true
        - sudo pip3 install --upgrade pip
        - sudo pip3 install wheel pyIbex
        - git clone -b v3.1.1 https://github.com/sphinx-doc/sphinx
@@ -299,10 +299,12 @@ jobs:
          - tubex_test_x64_vc15.zip
          - tubex_lib-X.X.X-cp37-cp37m-win_amd64.whl
 
-   - name: "Windows Visual Studio 2015 x86 C++"
+   - name: "Windows Visual Studio 2015 x86 C++ Python 3.6"
      os: windows
      before_install: 
        - choco install -y vcbuildtools -ia "/InstallSelectableItems Win81SDK_CppBuildSKUV1;VisualCppBuildTools_ATLMFC_SDK" winflexbison
+       - cmd //c "choco install -y doxygen.install graphviz & choco install -y python --version=3.6.8.20200110 & refreshenv.cmd & pip install --upgrade pip & pip install wheel pyIbex & git clone -b v3.1.1 https://github.com/sphinx-doc/sphinx & cd sphinx & pip install . & pip install sphinx-tabs breathe sphinx_rtd_theme & refreshenv.cmd"
+       - export PATH=/c/Python36:/c/Python36/Scripts:$PATH
      script: 
        - git clone -b develop https://github.com/lebarsfa/ibex-lib.git
        - cd ibex-lib
@@ -314,8 +316,15 @@ jobs:
        - cd tubex-lib 
        - git submodule init ; git submodule update
        - mkdir build ; cd build
-       - cmake -G "Visual Studio 14" -A Win32 -D CMAKE_PREFIX_PATH="../ibex" -D CMAKE_INSTALL_PREFIX="../../tubex" ..
+       - cmake -G "Visual Studio 14" -A Win32 -D CMAKE_CXX_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_C_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_PREFIX_PATH="../ibex" -D CMAKE_INSTALL_PREFIX="../../tubex" -DWITH_PYTHON=ON -D PYTHON_EXECUTABLE=/C/Python36/python.exe ..
+       - cmake --build . --config Debug --target api
+       - cmake -G "Visual Studio 14" -A Win32 -D CMAKE_CXX_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_C_FLAGS=" /D WIN32 /EHsc /D _CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4305" -D CMAKE_PREFIX_PATH="../ibex" -D CMAKE_INSTALL_PREFIX="../../tubex" -DWITH_PYTHON=ON -D PYTHON_EXECUTABLE=/C/Python36/python.exe ..
        - cmake --build . --config Debug --target install
+       - cmake --build . --config Debug --target pip_package
+       # Test python program and wheel...
+       - cp *.whl ./../tubex_lib-X.X.X-cp36-cp36m-win32.whl
+       - pip install ./../tubex_lib-X.X.X-cp36-cp36m-win32.whl
+       - python ../examples/tuto/01_getting_started/01_getting_started.py || true
        - cd ../..
        # Test C++ program and bundle...
        - wget http://www.ensta-bretagne.fr/lebars/Share/tubex_test_win.zip
@@ -334,7 +343,9 @@ jobs:
        - cd ../..
      deploy:
        <<: *deploy_base
-       file: tubex_test_x86_vc14.zip
+       file: 
+         - tubex_test_x86_vc14.zip
+         - tubex_lib-X.X.X-cp36-cp36m-win32.whl
 
    - name: "Windows Visual Studio 2015 x64 C++ Python 3.5"
      os: windows
