--- a/.travis.yml
+++ b/.travis.yml
@@ -81,8 +81,8 @@ jobs:
        - cmake --build . --target install
        - cmake --build . --target pip_package
        # Test python program and wheel...
-       - cp *.whl ./../tubex_lib-X.X.X-cp36-cp36m-ubuntu_bionic_x86_64.whl
-       - pip install ./../tubex_lib-X.X.X-cp36-cp36m-ubuntu_bionic_x86_64.whl
+       - cp *.whl../../tubex_lib-X.X.X-cp36-cp36m-ubuntu_bionic_x86_64.whl
+       - pip install../../tubex_lib-X.X.X-cp36-cp36m-ubuntu_bionic_x86_64.whl
        - python ../examples/tuto/01_getting_started/01_getting_started.py || true
        - cd ../..
        # Test C++ program and bundle...
@@ -275,7 +275,7 @@ jobs:
        - cmake --build . --config Debug --target pip_package
        # Test python program and wheel...
        - cp *.whl ../../tubex_lib-X.X.X-cp37-cp37m-win_amd64.whl
-       - pip install ./../tubex_lib-X.X.X-cp37-cp37m-win_amd64.whl
+       - pip install../../tubex_lib-X.X.X-cp37-cp37m-win_amd64.whl
        - python ../examples/tuto/01_getting_started/01_getting_started.py || true
        - cd ../..
        # Test C++ program and bundle...
@@ -322,8 +322,8 @@ jobs:
        - cmake --build . --config Debug --target install
        - cmake --build . --config Debug --target pip_package
        # Test python program and wheel...
-       - cp *.whl ./../tubex_lib-X.X.X-cp36-cp36m-win32.whl
-       - pip install ./../tubex_lib-X.X.X-cp36-cp36m-win32.whl
+       - cp *.whl../../tubex_lib-X.X.X-cp36-cp36m-win32.whl
+       - pip install../../tubex_lib-X.X.X-cp36-cp36m-win32.whl
        - python ../examples/tuto/01_getting_started/01_getting_started.py || true
        - cd ../..
        # Test C++ program and bundle...
@@ -370,8 +370,8 @@ jobs:
        - cmake --build . --config Debug --target install
        - cmake --build . --config Debug --target pip_package
        # Test python program and wheel...
-       - cp *.whl ./../tubex_lib-X.X.X-cp35-cp35m-win_amd64.whl
-       - pip install ./../tubex_lib-X.X.X-cp35-cp35m-win_amd64.whl
+       - cp *.whl../../tubex_lib-X.X.X-cp35-cp35m-win_amd64.whl
+       - pip install../../tubex_lib-X.X.X-cp35-cp35m-win_amd64.whl
        - python ../examples/tuto/01_getting_started/01_getting_started.py || true
        - cd ../..
        # Test C++ program and bundle...
