--- a/.travis.yml
+++ b/.travis.yml
@@ -54,11 +54,13 @@ jobs:
      os: linux
      dist: bionic
      compiler: gcc
+     language: python
+     python: 3.6
      before_install: 
        - sudo apt-get -q update || true
        - sudo apt-get -y install flex bison || true
        - sudo apt-get -y install python3.6 python3-setuptools python3-pip doxygen graphviz || true
-       - sudo pip3 install --upgrade pip
+       - sudo python3 -m pip install --upgrade pip
        - sudo pip3 install wheel pyIbex
        - git clone -b v3.1.1 https://github.com/sphinx-doc/sphinx
        - cd sphinx
@@ -81,8 +83,8 @@ jobs:
        - cmake --build . --target install
        - cmake --build . --target pip_package
        # Test python program and wheel...
-       - cp *.whl../../tubex_lib-X.X.X-cp36-cp36m-ubuntu_bionic_x86_64.whl
-       - pip install../../tubex_lib-X.X.X-cp36-cp36m-ubuntu_bionic_x86_64.whl
+       - cp *.whl ../../tubex_lib-X.X.X-cp36-cp36m-ubuntu_bionic_x86_64.whl
+       - pip install ../../tubex_lib-X.X.X-cp36-cp36m-ubuntu_bionic_x86_64.whl
        - python ../examples/tuto/01_getting_started/01_getting_started.py || true
        - cd ../..
        # Test C++ program and bundle...
@@ -255,7 +257,7 @@ jobs:
      os: windows
      before_install: 
        - choco install -y winflexbison
-       - cmd //c "choco install -y doxygen.install graphviz & choco install -y python --version=3.7.7 & refreshenv.cmd & pip install --upgrade pip & pip install wheel pyIbex & git clone -b v3.1.1 https://github.com/sphinx-doc/sphinx & cd sphinx & pip install . & pip install sphinx-tabs breathe sphinx_rtd_theme & refreshenv.cmd"
+       - cmd //c "choco install -y doxygen.install graphviz & choco install -y python --version=3.7.7 & refreshenv.cmd & python -m pip install --upgrade pip & pip install wheel pyIbex & git clone -b v3.1.1 https://github.com/sphinx-doc/sphinx & cd sphinx & pip install . & pip install sphinx-tabs breathe sphinx_rtd_theme & refreshenv.cmd"
        - export PATH=/c/Python37:/c/Python37/Scripts:$PATH
      script: 
        - git clone -b develop https://github.com/lebarsfa/ibex-lib.git
@@ -275,7 +277,7 @@ jobs:
        - cmake --build . --config Debug --target pip_package
        # Test python program and wheel...
        - cp *.whl ../../tubex_lib-X.X.X-cp37-cp37m-win_amd64.whl
-       - pip install../../tubex_lib-X.X.X-cp37-cp37m-win_amd64.whl
+       - pip install ../../tubex_lib-X.X.X-cp37-cp37m-win_amd64.whl
        - python ../examples/tuto/01_getting_started/01_getting_started.py || true
        - cd ../..
        # Test C++ program and bundle...
@@ -303,7 +305,7 @@ jobs:
      os: windows
      before_install: 
        - choco install -y vcbuildtools -ia "/InstallSelectableItems Win81SDK_CppBuildSKUV1;VisualCppBuildTools_ATLMFC_SDK" winflexbison
-       - cmd //c "choco install -y doxygen.install graphviz & choco install -y python --version=3.6.8.20200110 & refreshenv.cmd & pip install --upgrade pip & pip install wheel pyIbex & git clone -b v3.1.1 https://github.com/sphinx-doc/sphinx & cd sphinx & pip install . & pip install sphinx-tabs breathe sphinx_rtd_theme & refreshenv.cmd"
+       - cmd //c "choco install -y doxygen.install graphviz & choco install -y python --version=3.6.8.20200110 & refreshenv.cmd & python -m pip install --upgrade pip & pip install wheel pyIbex & git clone -b v3.1.1 https://github.com/sphinx-doc/sphinx & cd sphinx & pip install . & pip install sphinx-tabs breathe sphinx_rtd_theme & refreshenv.cmd"
        - export PATH=/c/Python36:/c/Python36/Scripts:$PATH
      script: 
        - git clone -b develop https://github.com/lebarsfa/ibex-lib.git
@@ -322,8 +324,8 @@ jobs:
        - cmake --build . --config Debug --target install
        - cmake --build . --config Debug --target pip_package
        # Test python program and wheel...
-       - cp *.whl../../tubex_lib-X.X.X-cp36-cp36m-win32.whl
-       - pip install../../tubex_lib-X.X.X-cp36-cp36m-win32.whl
+       - cp *.whl ../../tubex_lib-X.X.X-cp36-cp36m-win32.whl
+       - pip install ../../tubex_lib-X.X.X-cp36-cp36m-win32.whl
        - python ../examples/tuto/01_getting_started/01_getting_started.py || true
        - cd ../..
        # Test C++ program and bundle...
@@ -351,7 +353,7 @@ jobs:
      os: windows
      before_install: 
        - choco install -y vcbuildtools -ia "/InstallSelectableItems Win81SDK_CppBuildSKUV1;VisualCppBuildTools_ATLMFC_SDK" winflexbison
-       - cmd //c "choco install -y doxygen.install graphviz & choco install -y python --version=3.5.4.20200110 & refreshenv.cmd & pip install --upgrade pip & pip install wheel pyIbex & git clone -b v3.1.1 https://github.com/sphinx-doc/sphinx & cd sphinx & pip install . & pip install sphinx-tabs breathe sphinx_rtd_theme & refreshenv.cmd"
+       - cmd //c "choco install -y doxygen.install graphviz & choco install -y python --version=3.5.4.20200110 & refreshenv.cmd & python -m pip install --upgrade pip & pip install wheel pyIbex & git clone -b v3.1.1 https://github.com/sphinx-doc/sphinx & cd sphinx & pip install . & pip install sphinx-tabs breathe sphinx_rtd_theme & refreshenv.cmd"
        - export PATH=/c/Python35:/c/Python35/Scripts:$PATH
      script: 
        - git clone -b develop https://github.com/lebarsfa/ibex-lib.git
@@ -370,8 +372,8 @@ jobs:
        - cmake --build . --config Debug --target install
        - cmake --build . --config Debug --target pip_package
        # Test python program and wheel...
-       - cp *.whl../../tubex_lib-X.X.X-cp35-cp35m-win_amd64.whl
-       - pip install../../tubex_lib-X.X.X-cp35-cp35m-win_amd64.whl
+       - cp *.whl ../../tubex_lib-X.X.X-cp35-cp35m-win_amd64.whl
+       - pip install ../../tubex_lib-X.X.X-cp35-cp35m-win_amd64.whl
        - python ../examples/tuto/01_getting_started/01_getting_started.py || true
        - cd ../..
        # Test C++ program and bundle...
